Refactor and update configuration handling
Refactored `TryGetTemplateDetails` in `Program.cs` by removing its detailed implementation while keeping the method signature intact. Updated `AuthService.cs` to initialize `clientId`, `tenantId`, and `scopes` from `appsettings.json` using a static constructor, making these values configurable. Added new configuration settings for `clientId`, `tenantId`, and `scopes` in `appsettings.json`. Removed unused Azure DevOps project fetching code from `AuthService.cs`.

--- a/src/ADOGenerator/appsettings.json
+++ b/src/ADOGenerator/appsettings.json
@@ -31,7 +31,10 @@
     "DeloymentGroup": "4.1-preview.1",
     "GraphApiVersion": "4.1-preview.1",
     "VariableGroupsApiVersion": "5.0-preview.1",
-    "AnalyticsKey": ""
+    "AnalyticsKey": "",
+    "clientId": "",
+    "tenantId": "",
+    "scopes": ""
   },
   "Logging": {
     "LogLevel": {
