--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -5,9 +5,9 @@ on:
   
   #push:
   #  branches: [master]
-  #pull_request:
-  #  # The branches below must be a subset of the branches above
-  #  branches: [master]
+  pull_request:
+    # The branches below must be a subset of the branches above
+    branches: [master]
   #schedule:
   #  - cron: '0 0 * * 0'
 
