--- a/.github/workflows/console-app-dotnet-core.yml
+++ b/.github/workflows/console-app-dotnet-core.yml
@@ -61,7 +61,7 @@ jobs:
         run: cd src
         
       - name: Build with dotnet
-        run: dotnet build /*.sln --configuration Release 
+        run: dotnet build -c Release 
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/AzDemoGenerator
