--- a/.github/workflows/console-app-dotnet-core.yml
+++ b/.github/workflows/console-app-dotnet-core.yml
@@ -5,7 +5,7 @@ env:
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "akshay-online-patch-ymlfix" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
