--- a/.github/workflows/console-app-dotnet-core.yml
+++ b/.github/workflows/console-app-dotnet-core.yml
@@ -40,10 +40,10 @@ jobs:
         run: dotnet build src/ADOGenerator.sln -c Release
 
       - name: Publish with dotnet
-        run: dotnet publish src/ADOGenerator.sln -c Release -o ${{env.DOTNET_ROOT}}/AzDemoGenerator
+        run: dotnet publish src/ADOGenerator.sln -c Release -o "${{env.DOTNET_ROOT}}/drop"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/AzDemoGenerator
+          path: "${{env.DOTNET_ROOT}}/drop"
