demo generator changes to create artifacts.

--- a/src/ADOGenerator/ADOGenerator.csproj
+++ b/src/ADOGenerator/ADOGenerator.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<Compile Remove="IServices\IConfiguration.cs" />
+		<Compile Remove="Models\Configuration.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<!-- Include the files you want to copy -->
@@ -85,6 +86,10 @@
 	  <None Update="appsettings.json">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="ExtractedTemplate\" />
 	</ItemGroup>
 
 </Project>
