Enhance Azure DevOps Demo Generator functionality
- Added `UpgradeLog.htm` to `.gitignore`.
- Updated `ADOGenerator.csproj` to include `ExtractedTemplate` folder and ensure files are copied to output.
- Modified `ITemplateService` to change `StartEnvironmentSetupProcess` to `GenerateTemplateArtifacts`, returning a tuple.
- Improved user interaction in `Program.cs` with JSON handling and better project creation logic.
- Refactored `ExtractorService` for improved path handling and directory creation.
- Enhanced `TemplateService` structure and error handling for project analysis and artifact generation.
- Overall improvements to functionality, maintainability, and user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ UpgradeLog.htm
 /src/AzureDevOpsDemoBuilder/log
 /src/AzureDevOpsDemoBuilder/Appsettings.Development.json
 /src/AzureDevOpsDemoBuilder/appsettings.json
+/src/ADOGenerator/ExtractedTemplate
